--- a/css/card.css
+++ b/css/card.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@300;500;800&display=swap");
 .card-container {
-  background-color: rgba(223, 100, 0, 0.1);
+  background-color: rgba(223, 0, 93, 0.1);
   border-radius: 1rem;
-  -webkit-box-shadow: 5px 5px 15px rgba(223, 100, 0, 0.07);
-          box-shadow: 5px 5px 15px rgba(223, 100, 0, 0.07);
+  -webkit-box-shadow: 5px 5px 15px rgba(223, 0, 93, 0.07);
+          box-shadow: 5px 5px 15px rgba(223, 0, 93, 0.07);
   font-family: 'Sarabun', sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -14,6 +14,7 @@
           flex-flow: column wrap;
   max-width: 30rem;
   padding: 1rem;
+  margin: 1rem;
 }
 
 .card-container div {
@@ -29,20 +30,22 @@
 }
 
 .card-container div h3 {
-  color: #df6400;
+  color: #df005d;
   font-size: 1.5rem;
   font-weight: 800;
   text-transform: uppercase;
   margin-bottom: 0.25rem;
 }
 
-.card-container div h4 {
-  color: #dd2013;
+.card-container div .percent-completed {
+  color: #0a8615;
   font-size: 0.9rem;
-  background-color: rgba(221, 32, 19, 0.15);
+  text-align: center;
+  background-color: rgba(10, 134, 21, 0.15);
   border-radius: .5rem;
-  border: 0.2rem solid #dd2013;
+  border: 0.2rem solid #0a8615;
   padding: 0 0.75rem 0.1rem;
+  min-width: 3rem;
 }
 
 .card-container ul {
@@ -71,7 +74,7 @@
           appearance: none;
   background-color: transparent;
   border-radius: 500rem;
-  border: 0.2rem solid #df6400;
+  border: 0.2rem solid #df005d;
   position: relative;
   top: 0.1rem;
   padding: 0.5rem;
@@ -88,19 +91,19 @@
 }
 
 .card-container ul li div input[type=checkbox]:checked {
-  background-color: rgba(223, 100, 0, 0.5);
+  background-color: rgba(223, 0, 93, 0.5);
 }
 
 .card-container ul li div label {
-  color: #df6400;
+  color: #df005d;
   outline: none;
 }
 
-.card-container button {
+.card-container .add-button {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  color: #df6400;
+  color: #df005d;
   border: none;
   background: none;
   max-width: 5rem;
@@ -109,6 +112,15 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  -webkit-transition: -webkit-filter ease 100ms;
+  transition: -webkit-filter ease 100ms;
+  transition: filter ease 100ms;
+  transition: filter ease 100ms, -webkit-filter ease 100ms;
+}
+
+.card-container .add-button:active {
+  -webkit-filter: brightness(60%);
+          filter: brightness(60%);
 }
 
 .card-container * {
