Added a delete button to the cards.

--- a/card.scss
+++ b/card.scss
@@ -91,6 +91,12 @@
                     color:   $primary-color;
                     cursor:  text;
                     outline: none;
+                    flex-grow: 1;
+                }
+
+                .delete-button {
+                    position: relative;
+                    top: 2px;
                 }
             }
         }
