--- a/css/header.css
+++ b/css/header.css
@@ -18,6 +18,31 @@ header > * {
   margin: 1rem 1rem;
 }
 
+header #main-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-family: 'Sarabun', sans-serif;
+  font-weight: 800;
+}
+
+header #main-title * {
+  margin: 0;
+}
+
+header #main-title h2 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
 header button {
   background-color: #fff;
   border: none;
