--- a/header.scss
+++ b/header.scss
@@ -14,6 +14,26 @@ header {
         margin:    1rem 1rem;
     }
 
+    #main-title {
+        display:        flex;
+        flex-direction: column;
+        align-items:    center;
+
+        color: #fff;
+        
+        font-family:    'Sarabun', sans-serif;
+        font-weight:    800;
+
+        * {
+            margin: 0
+        }
+
+        h2 {
+            font-size:      1.5rem;
+            text-transform: uppercase;
+        }
+    }
+
     button {
         background-color: #fff;
         border:           none;
