Added a danger color to the delete button in cards.

--- a/card.scss
+++ b/card.scss
@@ -95,6 +95,7 @@
                 }
 
                 .delete-button {
+                    color:    #D62246;
                     position: relative;
                     top: 2px;
                 }
